change controller to TypeScript class

--- a/swiss-song-charts/index.html
+++ b/swiss-song-charts/index.html
@@ -18,8 +18,7 @@
         ({{entry[3]}}) - {{entry[2]}} points
     </div>
 </div>
-
-<script src="../lib/angular.min.js"></script>
+<script src="../lib/angular.js"></script>
 <script src="swiss-song-charts.js"></script>
 </body>
 </html>
