move projects to src/

--- a/src/mobile-number-cost/index.html
+++ b/src/mobile-number-cost/index.html
@@ -33,7 +33,7 @@
                style="font-size: 14px; width: 300px; border: 1px solid #fff;">
     </div>
 </div>
-<script src="../lib/angular.js"></script>
+<script src="../../lib/angular.js"></script>
 <script src="mobile-number-cost.js"></script>
 </body>
 </html>
