--- a/src/hash-length/index.html
+++ b/src/hash-length/index.html
@@ -31,7 +31,7 @@
     </div>
     <div style="font-size: 12px;"> (better collision probability approx.: {{hashLengthCtrl.prob}})</div>
 </div>
-<script src="../lib/angular.js"></script>
+<script src="../../lib/angular.js"></script>
 <script src="hash-length.js"></script>
 </body>
 </html>
